--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@beezyinc/eslint-config-beezy",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "main": "index.js",
   "keywords": [
     "eslint",
@@ -15,19 +15,20 @@
   "license": "MIT",
   "dependencies": {
     "babel-eslint": "^10.0.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "4.1.0"
   },
   "peerDependencies": {
-    "eslint": "^5.3.0",
-    "prettier": "^1.15.2"
+    "eslint": "^7.8.1",
+    "prettier": "^2.1.1"
   },
   "devDependencies": {
-    "eslint": "^5.3.0",
-    "prettier": "^1.15.2"
+    "eslint": "^7.8.1",
+    "prettier": "^2.1.1"
   }
 }
