Force EOL to LF and add common prettier config

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
-    "singleQuote": true,
-    "printWidth": 120
+  "arrowParens": "avoid",
+  "bracketSpacing": false,
+  "jsxBracketSameLine": false,
+  "printWidth": 80,
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "none",
+  "useTabs": false
 }
