--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@beezyinc/eslint-config-beezy",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "main": "index.js",
   "keywords": [
     "eslint",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "eslint": "^7.8.1",
+    "eslint-import-resolver-webpack": "0.13.0",
     "prettier": "^2.1.1"
   }
 }
