--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
   "peerDependencies": {
     "eslint": "^7.8.1",
     "prettier": "^2.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.11.0",
+    "prettier": "^2.1.2"
   }
 }
