--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@beezyinc/eslint-config-beezy",
   "version": "1.11.0",
   "description": "ESLint configuration used by Beezy",
+  "author": "Beezy Inc.",
   "main": "index.js",
   "keywords": [
     "eslint",
@@ -12,8 +13,6 @@
     "styleguide"
   ],
   "repository": "https://github.com/BeezyInc/eslint-config-beezy.git",
-  "author": "Mario Terron <mario.terron@beezy.net>",
-  "license": "MIT",
   "dependencies": {
     "babel-eslint": "^10.0.1",
     "eslint-config-airbnb": "^18.2.0",
