--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@beezyinc/eslint-config-beezy",
-  "version": "1.23.0",
+  "version": "1.29.0",
   "description": "ESLint configuration used by Beezy",
   "author": "Beezy Inc.",
   "main": "index.js",
@@ -22,7 +22,10 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "4.1.2"
+    "eslint-plugin-react-hooks": "4.1.2",
+    "stylelint": "13.7.2",
+    "stylelint-order": "4.1.0",
+    "stylelint-scss": "3.18.0"
   },
   "peerDependencies": {
     "eslint": "^7.8.1",
